experimenting selenium more

--- a/experiment.ipynb
+++ b/experiment.ipynb
@@ -739,15 +739,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "init\ngreen flag loaded...\ngreen flag clicked...\nwaiting...\nwait done!\nstarted the game\n0\npaused\n1\nunpaused\n2\npaused\n3\nunpaused\n4\npaused\n5\nunpaused\n6\npaused\n7\nunpaused\n8\npaused\n9\nunpaused\n10\npaused\n11\nunpaused\n12\npaused\n13\nunpaused\n14\npaused\n15\nunpaused\n16\npaused\n17\nunpaused\n18\npaused\n19\nunpaused\n20\npaused\n21\nunpaused\n22\npaused\n23\nunpaused\n24\npaused\n25\nunpaused\n26\npaused\n27\nunpaused\n28\npaused\n29\nunpaused\n30\npaused\n31\nunpaused\n32\npaused\n33\nunpaused\n34\npaused\n35\nunpaused\n36\npaused\n37\nunpaused\n38\npaused\n39\nunpaused\n40\npaused\n41\nunpaused\n42\npaused\n43\nunpaused\n44\npaused\n45\nunpaused\n46\npaused\n47\nunpaused\n48\npaused\n49\nunpaused\n50\npaused\n51\nunpaused\n52\npaused\n53\nunpaused\n54\npaused\n55\nunpaused\n56\npaused\n57\nunpaused\n58\npaused\n59\nunpaused\n60\npaused\n61\nunpaused\n62\npaused\n63\nunpaused\n64\npaused\n65\nunpaused\n66\npaused\n67\nunpaused\n68\npaused\n69\nunpaused\n70\npaused\n71\nunpaused\n72\npaused\n73\nunpaused\n74\npaused\n75\nunpaused\n76\npaused\n77\nunpaused\n78\npaused\n79\nunpaused\n80\npaused\n81\nunpaused\n82\npaused\n83\nunpaused\n84\npaused\n85\nunpaused\n86\npaused\n87\nunpaused\n88\npaused\n89\nunpaused\n90\npaused\n91\nunpaused\n92\npaused\n93\nunpaused\n94\npaused\n95\nunpaused\n96\npaused\n97\nunpaused\n98\npaused\n99\nunpaused\n"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from selenium import webdriver\n",
     "from IPython.display import Image\n",
@@ -816,30 +810,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "init\ngreen flag loaded...\n"
-    },
-    {
-     "output_type": "error",
-     "ename": "ElementClickInterceptedException",
-     "evalue": "Message: Element <img src=\"/static/assets/2e0c4790f8f9cf28e3c346b9cef0fcb6.svg\"> is not clickable at point (632,516) because another element <img class=\"loader_middle-block_CKcTg\" src=\"/static/assets/f9dce53613d5f85b311ce9f84423c08b.svg\"> obscures it\n",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mElementClickInterceptedException\u001b[0m          Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-17-65065aa32fa8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     21\u001b[0m     \u001b[0mflag_element\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdriver\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfind_element_by_css_selector\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\".stage_green-flag-overlay_gNXnv img\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m     \u001b[0mwait\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0muntil\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mexpected_conditions\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0melement_to_be_clickable\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mBy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mCSS_SELECTOR\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\".stage_green-flag-overlay_gNXnv img\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 23\u001b[0;31m     \u001b[0mflag_element\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclick\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     24\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"green flag clicked...\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"waiting...\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages/selenium/webdriver/remote/webelement.py\u001b[0m in \u001b[0;36mclick\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     78\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mclick\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     79\u001b[0m         \u001b[0;34m\"\"\"Clicks the element.\"\"\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 80\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_execute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mCommand\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mCLICK_ELEMENT\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     81\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     82\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0msubmit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages/selenium/webdriver/remote/webelement.py\u001b[0m in \u001b[0;36m_execute\u001b[0;34m(self, command, params)\u001b[0m\n\u001b[1;32m    631\u001b[0m             \u001b[0mparams\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    632\u001b[0m         \u001b[0mparams\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'id'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_id\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 633\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_parent\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcommand\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mparams\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    634\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    635\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mfind_element\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mby\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mBy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mID\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages/selenium/webdriver/remote/webdriver.py\u001b[0m in \u001b[0;36mexecute\u001b[0;34m(self, driver_command, params)\u001b[0m\n\u001b[1;32m    319\u001b[0m         \u001b[0mresponse\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcommand_executor\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdriver_command\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mparams\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    320\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mresponse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 321\u001b[0;31m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0merror_handler\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcheck_response\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mresponse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    322\u001b[0m             response['value'] = self._unwrap_value(\n\u001b[1;32m    323\u001b[0m                 response.get('value', None))\n",
-      "\u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages/selenium/webdriver/remote/errorhandler.py\u001b[0m in \u001b[0;36mcheck_response\u001b[0;34m(self, response)\u001b[0m\n\u001b[1;32m    240\u001b[0m                 \u001b[0malert_text\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'alert'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'text'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    241\u001b[0m             \u001b[0;32mraise\u001b[0m \u001b[0mexception_class\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmessage\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mscreen\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstacktrace\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0malert_text\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 242\u001b[0;31m         \u001b[0;32mraise\u001b[0m \u001b[0mexception_class\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmessage\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mscreen\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstacktrace\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    243\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    244\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m_value_or_default\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mobj\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkey\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdefault\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mElementClickInterceptedException\u001b[0m: Message: Element <img src=\"/static/assets/2e0c4790f8f9cf28e3c346b9cef0fcb6.svg\"> is not clickable at point (632,516) because another element <img class=\"loader_middle-block_CKcTg\" src=\"/static/assets/f9dce53613d5f85b311ce9f84423c08b.svg\"> obscures it\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from selenium import webdriver\n",
     "from selenium.webdriver.firefox.options import Options\n",
@@ -907,7 +880,62 @@
     "- However before going into that I want to also lookinto the dynamics of scratch environment that is working in browser. Maybe I can interact with the code by sending direct javascript codes to the javascript scratch object itself.\n",
     "- I have spent some time in chromes console. while the project page is opened. I can access some of the elements however I could not send key actions. whatever element I acess there is not function called trigger which actually it should have.\n",
     "- Well yes I am lost again. I find myself hoping fom one page to another.\n",
-    "- I have give up from javasctipt stragegy. When I try to send key strocked from javasctip console nothing happens."
+    "- I have give up from javasctipt stragegy. When I try to send key strocked from javasctip console nothing happens.\n",
+    "- the selenium is actually very good tool. Eventhough sending the key strokes for this project is problematic, it will be good for me to master on the tool would be great. Because By this way I can write any code to automaticlly collect any data to train. In this case we are using screenshots. So I decided to learn its behaviour better.\n",
+    "- My plan is to write very simple html file and develop slowly to read that html with selenium. We will see where it goes... Go!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "wait...\nwaited\npressed0\npressed1\npressed2\npressed3\npressed4\npressed5\npressed6\npressed7\npressed8\npressed9\npressed10\npressed11\npressed12\npressed13\npressed14\npressed15\npressed16\npressed17\npressed18\npressed19\npressed20\npressed21\npressed22\npressed23\npressed24\npressed25\npressed26\npressed27\npressed28\npressed29\npressed30\npressed31\npressed32\npressed33\npressed34\npressed35\npressed36\npressed37\npressed38\npressed39\npressed40\npressed41\npressed42\npressed43\npressed44\npressed45\npressed46\npressed47\npressed48\npressed49\npressed50\npressed51\npressed52\npressed53\npressed54\npressed55\npressed56\npressed57\npressed58\npressed59\npressed60\npressed61\npressed62\npressed63\npressed64\npressed65\npressed66\npressed67\npressed68\npressed69\npressed70\npressed71\npressed72\npressed73\npressed74\npressed75\npressed76\npressed77\npressed78\npressed79\npressed80\npressed81\npressed82\npressed83\npressed84\npressed85\npressed86\npressed87\npressed88\npressed89\npressed90\npressed91\npressed92\npressed93\npressed94\npressed95\npressed96\npressed97\npressed98\npressed99\n"
+    }
+   ],
+   "source": [
+    "from selenium import webdriver\n",
+    "from selenium.webdriver.common.keys import Keys\n",
+    "import time\n",
+    "\n",
+    "options = webdriver.ChromeOptions()\n",
+    "#options.add_argument('headless')\n",
+    "driver = webdriver.Chrome(executable_path=\"/usr/local/bin/chromedriver\", chrome_options=options)\n",
+    "\n",
+    "try:\n",
+    "    #driver.get('file:///Users/hakanonal/vscode/geodashml/selenium.html')\n",
+    "    driver.get('https://scratch.mit.edu/projects/105500895/fullscreen/')\n",
+    "    print(\"wait...\")\n",
+    "    time.sleep(10)\n",
+    "    print(\"waited\")\n",
+    "    init_script = \"\"\"\n",
+    "        let myspace = document.createElement('input');\n",
+    "        myspace.id = \"myspace\";\n",
+    "        myspace.type = \"button\";\n",
+    "        myspace.onclick = function(){\n",
+    "            document.dispatchEvent(new KeyboardEvent('keypress',{'keyCode':112}));\n",
+    "        };\n",
+    "        document.body.appendChild(myspace);\n",
+    "    \"\"\"\n",
+    "    #driver.execute_script(init_script)\n",
+    "    #myspace = driver.find_element_by_id(\"myspace\")\n",
+    "    app = driver.find_element_by_tag_name(\"#app\")\n",
+    "    pause_action = webdriver.ActionChains(driver).move_to_element(app).send_keys(\"p\")\n",
+    "\n",
+    "\n",
+    "    for i in range(100):\n",
+    "        #myspace.click()\n",
+    "        #html.send_keys(\"p\")\n",
+    "        #pause_action.perform()\n",
+    "        driver.execute_script(\"document.dispatchEvent(new KeyboardEvent('keypress',{'keyCode':112}));\")\n",
+    "        print(\"pressed%d\"%i)\n",
+    "        time.sleep(1)\n",
+    "\n",
+    "finally:\n",
+    "    driver.quit()"
    ]
   },
   {
