--- a/experiment.ipynb
+++ b/experiment.ipynb
@@ -882,12 +882,15 @@
     "- Well yes I am lost again. I find myself hoping fom one page to another.\n",
     "- I have give up from javasctipt stragegy. When I try to send key strocked from javasctip console nothing happens.\n",
     "- the selenium is actually very good tool. Eventhough sending the key strokes for this project is problematic, it will be good for me to master on the tool would be great. Because By this way I can write any code to automaticlly collect any data to train. In this case we are using screenshots. So I decided to learn its behaviour better.\n",
-    "- My plan is to write very simple html file and develop slowly to read that html with selenium. We will see where it goes... Go!"
+    "- My plan is to write very simple html file and develop slowly to read that html with selenium. We will see where it goes... Go!\n",
+    "\n",
+    "06.05.2020\n",
+    "- Well selenium is a very powerful tool. I bealive scratch framework is missing some of the events. I bealive scratch framework has some built-in codes to prevent automation. I am going to try to find this game on another platform."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
