finding consistant keystrokes relization by sending key_down and key_up events seperatelly.

--- a/experiment.ipynb
+++ b/experiment.ipynb
@@ -885,18 +885,24 @@
     "- My plan is to write very simple html file and develop slowly to read that html with selenium. We will see where it goes... Go!\n",
     "\n",
     "06.05.2020\n",
-    "- Well selenium is a very powerful tool. I bealive scratch framework is missing some of the events. I bealive scratch framework has some built-in codes to prevent automation. I am going to try to find this game on another platform."
+    "- Well selenium is a very powerful tool. I bealive scratch framework is missing some of the events. I bealive scratch framework has some built-in codes to prevent automation. I am going to try to find this game on another platform.\n",
+    "- I have cheked if the game exists free on another platform but I could not find. However in one site I have examined the iframe adddress of the scratch url. and I found a embed version of that. \n",
+    "- I have tried if this version of the url is going to respond better. But It did not\n",
+    "- After that something incredeible happened. I happened to try key_down and key_up once more. By putting 1-3 seconds sleep times between pressing them. when I press p key it pauses every time and relisein does nothing as expected. And when I press second time nothing happens and when release game starts every time as expected. Finally I get a consistant key storkes. I will develop on that I manage toe storkes work properlly aimed for my project I will go backon the track.\n",
+    "- Chaning pause down and up in one chain worked only once and did not worked consistantlly.\n",
+    "- Performing key_down and key_up seperatelly works consistantlly up to 35 times.\n",
+    "- I have even removed the time.sleep between calls and it consistantly recognized the key stokes of pause. I am so relivef. Finally..."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "wait...\nwaited\npressed0\npressed1\npressed2\npressed3\npressed4\npressed5\npressed6\npressed7\npressed8\npressed9\npressed10\npressed11\npressed12\npressed13\npressed14\npressed15\npressed16\npressed17\npressed18\npressed19\npressed20\npressed21\npressed22\npressed23\npressed24\npressed25\npressed26\npressed27\npressed28\npressed29\npressed30\npressed31\npressed32\npressed33\npressed34\npressed35\npressed36\npressed37\npressed38\npressed39\npressed40\npressed41\npressed42\npressed43\npressed44\npressed45\npressed46\npressed47\npressed48\npressed49\npressed50\npressed51\npressed52\npressed53\npressed54\npressed55\npressed56\npressed57\npressed58\npressed59\npressed60\npressed61\npressed62\npressed63\npressed64\npressed65\npressed66\npressed67\npressed68\npressed69\npressed70\npressed71\npressed72\npressed73\npressed74\npressed75\npressed76\npressed77\npressed78\npressed79\npressed80\npressed81\npressed82\npressed83\npressed84\npressed85\npressed86\npressed87\npressed88\npressed89\npressed90\npressed91\npressed92\npressed93\npressed94\npressed95\npressed96\npressed97\npressed98\npressed99\n"
+     "text": "wait...\nwaited\npressed0\nreleased0\npressed1\nreleased1\npressed2\nreleased2\npressed3\nreleased3\npressed4\nreleased4\npressed5\nreleased5\npressed6\nreleased6\npressed7\nreleased7\npressed8\nreleased8\npressed9\nreleased9\npressed10\nreleased10\npressed11\nreleased11\npressed12\nreleased12\npressed13\nreleased13\npressed14\nreleased14\npressed15\nreleased15\npressed16\nreleased16\npressed17\nreleased17\npressed18\nreleased18\npressed19\nreleased19\npressed20\nreleased20\npressed21\nreleased21\npressed22\nreleased22\npressed23\nreleased23\npressed24\nreleased24\npressed25\nreleased25\npressed26\nreleased26\npressed27\nreleased27\npressed28\nreleased28\npressed29\nreleased29\npressed30\nreleased30\npressed31\nreleased31\npressed32\nreleased32\npressed33\nreleased33\npressed34\nreleased34\npressed35\nreleased35\npressed36\nreleased36\npressed37\nreleased37\npressed38\nreleased38\npressed39\nreleased39\npressed40\nreleased40\npressed41\nreleased41\npressed42\nreleased42\npressed43\nreleased43\npressed44\nreleased44\npressed45\nreleased45\npressed46\nreleased46\npressed47\nreleased47\npressed48\nreleased48\npressed49\nreleased49\npressed50\nreleased50\npressed51\nreleased51\npressed52\nreleased52\npressed53\nreleased53\npressed54\nreleased54\npressed55\nreleased55\npressed56\nreleased56\npressed57\nreleased57\npressed58\nreleased58\npressed59\nreleased59\npressed60\nreleased60\npressed61\nreleased61\npressed62\nreleased62\npressed63\nreleased63\npressed64\nreleased64\npressed65\nreleased65\npressed66\nreleased66\npressed67\nreleased67\npressed68\nreleased68\npressed69\nreleased69\npressed70\nreleased70\npressed71\nreleased71\npressed72\nreleased72\npressed73\nreleased73\npressed74\nreleased74\npressed75\nreleased75\npressed76\nreleased76\npressed77\nreleased77\npressed78\nreleased78\npressed79\nreleased79\npressed80\nreleased80\npressed81\nreleased81\npressed82\nreleased82\npressed83\nreleased83\npressed84\nreleased84\npressed85\nreleased85\npressed86\nreleased86\npressed87\nreleased87\npressed88\nreleased88\npressed89\nreleased89\npressed90\nreleased90\npressed91\nreleased91\npressed92\nreleased92\npressed93\nreleased93\npressed94\nreleased94\npressed95\nreleased95\npressed96\nreleased96\npressed97\nreleased97\npressed98\nreleased98\npressed99\nreleased99\n"
     }
    ],
    "source": [
@@ -910,7 +916,8 @@
     "\n",
     "try:\n",
     "    #driver.get('file:///Users/hakanonal/vscode/geodashml/selenium.html')\n",
-    "    driver.get('https://scratch.mit.edu/projects/105500895/fullscreen/')\n",
+    "    #driver.get('https://scratch.mit.edu/projects/105500895/fullscreen/')\n",
+    "    driver.get('https://scratch.mit.edu/projects/105500895/embed?autostart=true')\n",
     "    print(\"wait...\")\n",
     "    time.sleep(10)\n",
     "    print(\"waited\")\n",
@@ -925,17 +932,26 @@
     "    \"\"\"\n",
     "    #driver.execute_script(init_script)\n",
     "    #myspace = driver.find_element_by_id(\"myspace\")\n",
-    "    app = driver.find_element_by_tag_name(\"#app\")\n",
-    "    pause_action = webdriver.ActionChains(driver).move_to_element(app).send_keys(\"p\")\n",
+    "    html = driver.find_element_by_tag_name(\"html\")\n",
+    "    canvas = driver.find_element_by_css_selector(\".stage_stage_1fD7k canvas\")\n",
+    "    pause_down = webdriver.ActionChains(driver).move_to_element(html).key_down(\"p\")\n",
+    "    pause_up = webdriver.ActionChains(driver).move_to_element(html).key_up(\"p\")\n",
+    "    pause_action = webdriver.ActionChains(driver).move_to_element(html).key_down(\"p\").key_up(\"p\")\n",
     "\n",
     "\n",
     "    for i in range(100):\n",
     "        #myspace.click()\n",
     "        #html.send_keys(\"p\")\n",
+    "        \n",
     "        #pause_action.perform()\n",
-    "        driver.execute_script(\"document.dispatchEvent(new KeyboardEvent('keypress',{'keyCode':112}));\")\n",
+    "        #print(\"actioned%d\"%i)\n",
+    "        #time.sleep(3)\n",
+    "\n",
+    "        pause_down.perform()\n",
     "        print(\"pressed%d\"%i)\n",
-    "        time.sleep(1)\n",
+    "        pause_up.perform()\n",
+    "        print(\"released%d\"%i)\n",
+    "        #time.sleep(1)\n",
     "\n",
     "finally:\n",
     "    driver.quit()"
