finnised monitoring environment

--- a/experiment.ipynb
+++ b/experiment.ipynb
@@ -974,7 +974,7 @@
     "\n",
     "06.05.2020 Get Back on Track\n",
     "\n",
-    "- \n"
+    "- Yeha it has worked and it is completed"
    ]
   },
   {
@@ -1187,6 +1187,255 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "e = environment()\n",
+    "try:\n",
+    "    e.start()\n",
+    "finally:\n",
+    "    e.end()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### [Build monitoring environment](https://github.com/hakanonal/geodashml/projects/1#card-37027287)\n",
+    "\n",
+    "08.05.2020\n",
+    "- adding the wandb codes to my agent and environment. Checking my previous project.\n",
+    "- Corrected some metric names to align the same name with the code.\n",
+    "- Executed some runs and checked if the metrics are flowwing correctlly. All seems ok. I think this task is done.\n",
+    "- save model does not seems to be working, I think I need to  save it to file system first. \n",
+    "- Even though I have saved the file to the file system first, The model file does not uploaded to wandb. I will check this problem later. Apart from that it seems all ok. I will moving to deploy stage.\n",
+    "- So to conclude you can find the project metrics from this [link](https://app.wandb.ai/hakanonal/geodashml)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import random\n",
+    "from os import path\n",
+    "from keras.models import Sequential\n",
+    "from keras.layers import Dense, Conv2D, Flatten, MaxPooling2D, Conv2DTranspose, BatchNormalization, UpSampling2D, Reshape\n",
+    "from keras.optimizers import Adam\n",
+    "from keras.models import load_model\n",
+    "from keras.activations import softmax\n",
+    "import wandb\n",
+    "\n",
+    "\n",
+    "class agent:\n",
+    "    def __init__(self,discount=0.95,exploration_rate=0.9,decay_factor=0.9999, learning_rate=0.1):\n",
+    "        self.discount = discount # How much we appreciate future reward over current\n",
+    "        self.exploration_rate = exploration_rate # Initial exploration rate\n",
+    "        self.decay_factor = decay_factor\n",
+    "        self.learning_rate = learning_rate\n",
+    "\n",
+    "        wandb.config.update({'model_name':'3xConv(64,3x3,relu)-Pool(2x2),Dense(64,relu),Dense(32,relu),Dense(1,sigmoid)(adam,mse)'})\n",
+    "        if(path.exists(self._getModelFilename())):\n",
+    "            self.model = load_model(self._getModelFilename())\n",
+    "        else:\n",
+    "            self.model = Sequential()\n",
+    "            self.model.add(Conv2D(64, kernel_size=3, activation='relu', input_shape=(544,725,4)))\n",
+    "            self.model.add(MaxPooling2D(pool_size=(2, 2)))\n",
+    "            self.model.add(Conv2D(64, kernel_size=3, activation='relu'))\n",
+    "            self.model.add(MaxPooling2D(pool_size=(2, 2)))\n",
+    "            self.model.add(Conv2D(64, kernel_size=3, activation='relu'))\n",
+    "            self.model.add(MaxPooling2D(pool_size=(2, 2)))\n",
+    "            self.model.add(Flatten())\n",
+    "            self.model.add(Dense(64,activation=\"relu\"))\n",
+    "            self.model.add(Dense(32,activation=\"relu\"))\n",
+    "            self.model.add(Dense(1,activation=\"sigmoid\"))\n",
+    "            self.model.compile(optimizer='adam', loss='mean_squared_error', metrics=['accuracy'])\n",
+    "\n",
+    "    def _getModelFilename(self):\n",
+    "        return \"geodash.h5\"\n",
+    "\n",
+    "    def saveModel(self):\n",
+    "        self.model.save(self._getModelFilename())\n",
+    "        wandb.save(self._getModelFilename())        \n",
+    "\n",
+    "    def get_next_action(self, state):\n",
+    "        if random.random() < self.exploration_rate: # Explore (gamble) or exploit (greedy)\n",
+    "            return self.random_action()\n",
+    "        else:\n",
+    "            return self.greedy_action(state)\n",
+    "\n",
+    "    def greedy_action(self, state):\n",
+    "        return self.getQ(state) > 0.5\n",
+    "    def random_action(self):\n",
+    "        return random.random() > 0.5\n",
+    "\n",
+    "    def getQ(self,state):\n",
+    "        state_to_predict = np.expand_dims(state,0)\n",
+    "        action_prediction = self.model.predict(state_to_predict)\n",
+    "        return action_prediction[0][0]\n",
+    "\n",
+    "    def train(self, old_state, new_state, reward):\n",
+    "        \n",
+    "        old_state_prediction = self.getQ(old_state)\n",
+    "        new_state_prediction = self.getQ(new_state)\n",
+    "\n",
+    "        old_state_prediction = ((1-self.learning_rate) * old_state_prediction) + (self.learning_rate * (reward + self.discount * new_state_prediction))\n",
+    "\n",
+    "        x = np.expand_dims(old_state,0)\n",
+    "        y = np.expand_dims(old_state_prediction,0)\n",
+    "        self.model.fit(x,y,verbose=0)\n",
+    "\n",
+    "    def update(self, old_state, new_state, reward):        \n",
+    "        self.train(old_state, new_state, reward)\n",
+    "        self.exploration_rate *= self.decay_factor\n",
+    "\n",
+    "\n",
+    "\n",
+    "from selenium import webdriver\n",
+    "from selenium.webdriver.support.ui import WebDriverWait\n",
+    "from selenium.webdriver.common.keys import Keys\n",
+    "from PIL import Image\n",
+    "import io\n",
+    "import numpy as np\n",
+    "import time\n",
+    "import wandb\n",
+    "\n",
+    "class environment:\n",
+    "    def __init__(self):\n",
+    "        wandb.init(project=\"geodashml\")\n",
+    "        self.config = {\n",
+    "            'discount': 0.95,\n",
+    "            'exploration_rate': 0.9,\n",
+    "            'decay_factor': 0.9999,\n",
+    "            'learning_rate': 0.1,\n",
+    "            'episode': 1,\n",
+    "            'hide_browser' : 1\n",
+    "        }\n",
+    "        self.agent = agent(\n",
+    "            discount=self.config['discount'],\n",
+    "            exploration_rate=self.config['exploration_rate'],\n",
+    "            decay_factor=self.config['decay_factor'],\n",
+    "            learning_rate=self.config['learning_rate']\n",
+    "            )\n",
+    "        self.reward = 0\n",
+    "        self.max_reward = 0\n",
+    "        self.tot_reward = 0\n",
+    "        self.tot_penalty = 0\n",
+    "        self.tot_valid = 0\n",
+    "        \n",
+    "        self.browser_options = webdriver.ChromeOptions()\n",
+    "        if self.config['hide_browser']:\n",
+    "            self.browser_options.add_argument('headless')\n",
+    "        self.browser_driver = webdriver.Chrome(executable_path=\"/usr/local/bin/chromedriver\", chrome_options=self.browser_options)\n",
+    "        self.browser_wait = WebDriverWait(self.browser_driver,timeout=10)\n",
+    "\n",
+    "        self.browser_driver.get('https://scratch.mit.edu/projects/105500895/embed')\n",
+    "        self.browser_wait.until(lambda d: d.find_element_by_css_selector(\".green-flag_green-flag_1kiAo\"))\n",
+    "        flag_element = self.browser_driver.find_element_by_css_selector(\".green-flag_green-flag_1kiAo\")\n",
+    "        time.sleep(1)\n",
+    "        flag_element.click()\n",
+    "        time.sleep(3)\n",
+    "        self.browser_html_element = self.browser_driver.find_element_by_tag_name(\"html\")\n",
+    "        self.browser_pause_down = webdriver.ActionChains(self.browser_driver).move_to_element(self.browser_html_element).key_down(\"p\")\n",
+    "        self.browser_pause_up = webdriver.ActionChains(self.browser_driver).move_to_element(self.browser_html_element).key_up(\"p\")\n",
+    "        self.browser_space_down = webdriver.ActionChains(self.browser_driver).move_to_element(self.browser_html_element).key_down(Keys.SPACE)\n",
+    "        self.browser_space_up = webdriver.ActionChains(self.browser_driver).move_to_element(self.browser_html_element).key_up(Keys.SPACE)\n",
+    "        self.game_pause_state = False\n",
+    "        self.browser_monitor_element = None\n",
+    "\n",
+    "\n",
+    "    def start(self):\n",
+    "        self.pressSpace() #to start the game\n",
+    "        self.browser_wait.until(lambda d: d.find_element_by_css_selector(\".monitor_value_3Yexa\"))        \n",
+    "        self.pauseGame()\n",
+    "        \n",
+    "        for episode in range(1,self.config['episode']+1):\n",
+    "            self.reward = 0\n",
+    "            past_reward = 0\n",
+    "            while True:\n",
+    "                old_state = self.readState()\n",
+    "                action_to_play = self.agent.get_next_action(old_state)\n",
+    "                self.playAction(action_to_play)\n",
+    "                new_state = self.readState()\n",
+    "                self.reward = int(self.readScore())\n",
+    "                self.agent.update(old_state,new_state,self.reward)\n",
+    "                self.tot_reward += self.reward\n",
+    "                self.max_reward = max(self.max_reward,self.reward)\n",
+    "                if(self.reward == past_reward):\n",
+    "                    self.tot_penalty += 1\n",
+    "                    break\n",
+    "                else:\n",
+    "                    self.tot_valid += 1\n",
+    "                past_reward = self.reward\n",
+    "            \n",
+    "            metrics = {\n",
+    "                'tot_valid' : self.tot_valid,\n",
+    "                'avg_valid' : self.tot_valid/episode,\n",
+    "                'tot_penalty' : self.tot_penalty,\n",
+    "                'avg_penalty' : self.tot_penalty/episode,\n",
+    "                'exploration_rate' : self.agent.exploration_rate,\n",
+    "                'max_reward' : self.max_reward,\n",
+    "                'tot_reward' : self.tot_reward,\n",
+    "                'avg_reward' : self.tot_reward/episode,\n",
+    "                'reward':self.reward,\n",
+    "            }\n",
+    "            wandb.log(metrics,step=episode)\n",
+    "\n",
+    "    def readScore(self):\n",
+    "        if(self.browser_monitor_element is None):\n",
+    "            self.browser_monitor_element = self.browser_driver.find_element_by_css_selector('.monitor-list_monitor-list-scaler_143tA .monitor_monitor-container_2J9gl[style=\"touch-action: none; transform: translate(0px, 0px); top: 6px; left: 5px;\"] .monitor_value_3Yexa')\n",
+    "        return self.browser_monitor_element.text\n",
+    "\n",
+    "    def readState(self):\n",
+    "        image_png = self.browser_driver.find_element_by_css_selector(\".stage_stage_1fD7k canvas\").screenshot_as_png\n",
+    "        img = Image.open(io.BytesIO(image_png))\n",
+    "        if(self.config['hide_browser'] == 0):\n",
+    "            img = img.resize((725,544), Image.ANTIALIAS)\n",
+    "        return np.asarray(img)\n",
+    "\n",
+    "    def playAction(self,action):\n",
+    "        self.unpauseGame()\n",
+    "        if action:\n",
+    "            self.pressSpace()\n",
+    "        self.pauseGame()\n",
+    "\n",
+    "    def pressSpace(self):\n",
+    "        self.browser_space_down.perform()\n",
+    "        self.browser_space_up.perform()\n",
+    "\n",
+    "    def pressPause(self):\n",
+    "        self.browser_pause_down.perform()\n",
+    "        self.browser_pause_up.perform()\n",
+    "    \n",
+    "    def pauseGame(self):\n",
+    "        if(self.game_pause_state == False):\n",
+    "            self.pressPause()\n",
+    "            self.game_pause_state = True\n",
+    "\n",
+    "    def unpauseGame(self):\n",
+    "        if(self.game_pause_state == True):\n",
+    "            self.pressPause()\n",
+    "            self.game_pause_state = False\n",
+    "\n",
+    "    def end(self):\n",
+    "        self.browser_driver.quit()\n",
+    "        self.agent.saveModel()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "display_data",
+     "data": {
+      "text/plain": "<IPython.core.display.HTML object>",
+      "text/html": "\n                Logging results to <a href=\"https://wandb.com\" target=\"_blank\">Weights & Biases</a> <a href=\"https://docs.wandb.com/integrations/jupyter.html\" target=\"_blank\">(Documentation)</a>.<br/>\n                Project page: <a href=\"https://app.wandb.ai/hakanonal/geodashml\" target=\"_blank\">https://app.wandb.ai/hakanonal/geodashml</a><br/>\n                Run page: <a href=\"https://app.wandb.ai/hakanonal/geodashml/runs/3qcdsqws\" target=\"_blank\">https://app.wandb.ai/hakanonal/geodashml/runs/3qcdsqws</a><br/>\n            "
+     },
+     "metadata": {}
+    }
+   ],
    "source": [
     "e = environment()\n",
     "try:\n",
