initial commit for deploying. decoupled the class to their respective .py files.

--- a/experiment.ipynb
+++ b/experiment.ipynb
@@ -1445,6 +1445,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### [Deploy to cloud](https://github.com/hakanonal/geodashml/projects/1#card-37027293)\n",
+    "\n",
+    "09.05.2020\n",
+    "\n",
+    "- From now on I will keep this notebook only for journaling. I will write down the code to their respective .py script files. I will try to link the commits heere.\n",
+    "- First I am trying to decouple the classes to their respective .py script files. and calling the main program via wandb agent method to start sweep. If you want to know more about monitoring via wandb with seep check [these](https://docs.wandb.com/sweeps/quickstart) documents.\n",
+    "- "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
