including main.py for executing single run not sweep. also changed the initial configuration setup forsingle run.

--- a/experiment.ipynb
+++ b/experiment.ipynb
@@ -1454,7 +1454,11 @@
     "\n",
     "- From now on I will keep this notebook only for journaling. I will write down the code to their respective .py script files. I will try to link the commits heere.\n",
     "- First I am trying to decouple the classes to their respective .py script files. and calling the main program via wandb agent method to start sweep. If you want to know more about monitoring via wandb with seep check [these](https://docs.wandb.com/sweeps/quickstart) documents.\n",
-    "- "
+    "- So the initial commit is [this](https://github.com/hakanonal/geodashml/commit/407ce37a96aa2c848ffd72e0fe425b918391dac9). When I run this code I get a timeout error. I gave the sweep parameter hide browser to hide. I have trieed to change the parameter after loading them from wandbi and wandb does not allow me to do that. That is not important however I need a quicker way to find why I get ther timeout error.\n",
+    "- I have created a different main.py file so that I can start single run to debug via python3 but not jupyter notebook. Currentlly I am having temprarry internet connection issues which I bealive has nothing to do with my code.\n",
+    "- Ok after connecting my computer to ethernet, I gat stable connection and program worked fine for single run. more over the error management and saving the .h5 file ro wandb seems to be working via python3 script.\n",
+    "- Of the convolutional network is huge. ~270mb :/\n",
+    "- I have also carried out the inital config section to main.py so that insingle run I can try single configuration but in sweep it can get the configuration from the sweep controller."
    ]
   },
   {
